# NYCU-Med-AI-Agent

./: .env.example  .env.production  .env.test  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_SUMMARY.md  List of Hospitals Accredited by the Ministry of Health and Welfare.json  README.md  docker-compose.prod.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_health_tests.py  vercel.json
.claude/spec/validation/: README.md
app/: api_docs.py  config.py  main.py  main_enhanced.py  router_docs.py
app/data/: health_resources.yaml  health_topics.yaml  nhi_info.yaml  vaccination_schedule.yaml
app/domain/: __init__.py  enhanced_triage.py  models.py  models_extended.py  rules_tw.py  triage.py
app/middlewares/: __init__.py  privacy.py  rate_limit.py  structured_logging.py
app/monitoring/: __init__.py  audit.py  health.py  metrics.py  structured_logging.py
app/routers/: __init__.py  healthinfo.py  hospitals.py  meta.py  monitoring.py  triage.py
app/services/: __init__.py  cache.py  geocoding.py  health_data.py  health_data_backup.py  nhia_registry.py  places.py
app/utils/: __init__.py  redis_rate_limiter.py  resilience.py
deployment/: README.md
deployment/pythonanywhere/: README.md  setup.sh  wsgi.py
deployment/render/: README.md  render.yaml
docs/: API_DOCUMENTATION_SUMMARY.md  USAGE.md  demo_api_usage.py  openapi.yaml  validate_api_docs.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useGeolocation.ts
frontend/src/pages/: HistoryPage.tsx  HomePage.tsx
frontend/src/services/: api.ts  healthService.ts  index.ts  monitoringService.ts
frontend/src/stores/: useAppStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
memory/agents/: README.md
memory/sessions/: README.md
spec/: SPARC-SPECIFICATION-SUMMARY.md
spec/architecture/: README.md
spec/architecture/api/: api-architecture.md  openapi-spec.yaml
spec/architecture/data/: data-architecture.md
spec/architecture/llm/: llm-interface-architecture.md
spec/architecture/localization/: taiwan-localization-architecture.md
spec/coordination/: README.md  package.json  sparc-cli.js  sparc-orchestrator.js
spec/implementation/: README.md
spec/requirements/: README.md
spec/tasks/: README.md  SYSTEM_STATUS.md  package-lock.json  package.json
tests/: README-E1-Tests.md  conftest.py  test_hospital_search_enhanced.py
tests/e2e/: test_healthinfo_api.py  test_hospitals_api.py  test_monitoring_api.py  test_triage_api.py
tests/fixtures/: sample_health_data.yaml
tests/integration/: test_enhanced_triage_integration.py  test_fallback_responses.py  test_hospitals_api.py  test_nhia_registry.py  test_places_nearby.py
tests/unit/: AUDIT_LOGGING_TEST_REPORT.md  test_audit_logging.py  test_audit_logging_comprehensive.py  test_circuit_breaker.py  test_config.py  test_emergency_meta.py  test_enhanced_triage.py  test_geocoding_addr.py  test_geocoding_ip.py  test_geocoding_service.py  test_health_monitoring.py  test_healthinfo_router.py  test_healthinfo_static.py  test_healthz.py  test_metrics_collection.py  test_places_service.py  test_privacy_middleware.py  test_privacy_mw.py  test_rate_limit_middleware.py  test_rate_limiting.py  test_retry_backoff.py  test_structured_logging.py  test_triage_core.py  test_triage_rules.py
(+74 files in other folders)
